Assignment3Part2/assignment3Part2.css
body {
	background-color: blue;
}

#favorites {
	background-color: red;
	min-height: 900px;
	width:	50%;
	border-radius: 25px;
	float: right;
	padding-bottom: 15px;
}

#gistList {
	float: left;
	background-color: orange;
	min-height: 900px;
	width: 50%;
	border-radius: 25px;
	padding-bottom: 15px;
}

#searchBar {
	left: 10px;
	position: relative;
	float: left;
	background-color: blue;
	height: 50px;
	width: 100%;
	z-index: -2;
}

.form {
	position: relative;
	color: white;
	float: right;
	left: -15px;
}

#fav_heading, #gist_heading {
	background-color: purple;
	padding: 10px;
	margin: 10px;
	text-align: center;
	font-weight: bold;
	border-radius: 25px;
	color: white;
}


.listing, .favorite {
	margin-left: 10px;
}

.description {
	float: left;
	width: 90%;
	background-color: green;
	border-radius: 25px;
	text-align: center;
	padding: 10px;
}

.fav_button {
	float: left;
	
	width: 30%;
	background-color: black;
	border-radius: 25px;
	text-align: center;
	color: pink;
	padding: 10px;

}

.fav_button:hover {
	background-color: white;
	color: black;
}

.language {
	float: left;
	width: 55%;
	background-color: yellow;
	border-radius: 25px;
	text-align: center;
	padding: 10px;

}

#pages {
	position: absolute;
	z-index: -1;
}
.pageSelect {
	position: relative;
	float: left;
	background-color: white;
	color: black;
	padding-top: 10px;
	padding-bottom: 40px;
	padding-left: 13px;
	padding-right: 13px;
	border-radius: 25px;
	top: 20px;
	left: -5px;
	
}

.pageSelect:hover {
	background-color: lightgreen;
}
/*.webpage {
	float: left;
	margin: 10px;
	width: 100%;
	height: 150px;
}

.portal {
	float: left;
	overflow: scroll;
	height: 150px;
	width: 90%;
}*/

